# GCOPTER

./: .gitignore  LICENSE  README.md
gcopter/: CMakeLists.txt  input.yaml  package.xml  trajectory.txt
gcopter/config/: gcopter_real_robot.yaml  global_planning.rviz  global_planning.yaml
gcopter/include/gcopter/: firi.hpp  gcopter.hpp  geo_utils.hpp  lbfgs_gcopter.hpp  minco.hpp  planner.hpp  sfc_gen.hpp  trajectory.hpp  voxel_map.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/launch/: global_planning.launch  global_planning.launch.py
gcopter/scripts/: corridor_utils.py  pcd_to_txt.py  visualizer.py
gcopter/src/: global_planning.cpp
map_gen/mockamap/: CMakeLists.txt  package.xml
map_gen/mockamap/config/: rviz.rviz
map_gen/mockamap/include/: maps.hpp
map_gen/mockamap/src/: ces_randommap.cpp  maps.cpp  mockamap.cpp
