<?xml version="1.0"?>
<package format="3">
  <name>mockamap</name>
  <version>0.1.0</version>
  <description>The mockamap package</description>

  <maintainer email="William.Wu@todo.todo">William.Wu</maintainer>

  <license>GPLv3</license>

  <author>William.Wu</author>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <!-- Test dependencies, if any -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
